--- a/package.json
+++ b/package.json
@@ -14,29 +14,32 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "event-emitter": "^0.3.5",
+    "lodash": "^4.17.21",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lodash": "^4.17.21"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.2",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "css-loader": "^6.7.3",
-    "style-loader": "^3.3.1",
-    "jest": "^29.3.1",
+    "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "babel-jest": "^29.3.1",
-    "url-loader": "^4.1.1",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "jest": "^29.3.1",
+    "node-sass": "^8.0.0",
     "prettier": "^2.8.2",
     "sass-loader": "^13.2.0",
-    "node-sass": "^8.0.0",
-    "typescript": "^4.9.4",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "^4.9.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "worker-loader": "^3.0.8"
   }
 }
