--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "test": "jest",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "lint": "eslint src --fix"
   },
   "dependencies": {
     "event-emitter": "^0.3.5",
@@ -26,9 +27,13 @@
     "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
     "jest": "^29.3.1",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.2",
