--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-prod": "webpack --mode production",
     "test": "jest",
     "start": "webpack serve --mode development",
+    "ngrok": "ngrok http 8080",
     "lint": "eslint src --fix"
   },
   "dependencies": {
